fix: fix to chill mộc châu

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
   # ==================== HTTP → HTTPS Redirect (fix vòng lặp) ====================
   server {
     listen 80;
-    server_name seemevitraco.com www.seemevitraco.com;
+    server_name Chillvitraco.com www.Chillvitraco.com;
 
     # Nếu proxy gửi header cho biết là HTTPS thì không redirect nữa
     if ($http_x_forwarded_proto = 'https') {
@@ -36,11 +36,11 @@ http {
   server {
     listen 443 ssl;
     http2 on;
-    server_name seemevitraco.com www.seemevitraco.com;
+    server_name Chillvitraco.com www.Chillvitraco.com;
 
     # SSL Certificates (Certbot)
-    ssl_certificate     /etc/letsencrypt/live/seemevitraco.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/seemevitraco.com/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/Chillvitraco.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/Chillvitraco.com/privkey.pem;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
